Added IsPainting method to return whether the viewmanager is currently painting. bug 56335 a=buster@netscape.com r=vidur@netscape.com